fix the margin and overflow

--- a/orchestrate/src/Styling/Groups.css
+++ b/orchestrate/src/Styling/Groups.css
@@ -1,7 +1,7 @@
 .display-groups {
-overflow: scroll;
-height: 70vh;
-width: 100vw;
+overflow: auto;
+height: 99vh;
+/* width: 100vw; */
 }
 
 .group-card {
@@ -16,9 +16,7 @@ width: 100vw;
   border: 2px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 0 20px rgba(8, 7, 16, 0.6);
   padding: 10px 10px;
-  margin-bottom: 10px;
-  margin-top: 15px;
-  margin-left: 29px;
+  margin: 20px auto;
   list-style: none;
 }
 
@@ -81,19 +79,6 @@ p {
 	font-weight: 500;
 }
 
-.create-group-button {
-  margin: 20px 0px;
-	width: 50%;
-	background-color: rgba(255, 215, 0, 0.4);
-	border: 1px solid #f2f2f2cc;
-	color: rgba(255, 255, 255, 0.9);
-	padding: 10px 0;
-	font-size: 18px;
-	font-weight: 600;
-	border-radius: 5px;
-	cursor: pointer;
-}
-
-.singlecard:active{
+.singlecard:hover{
  text-decoration: none;
 }
